--- a/Results.tex
+++ b/Results.tex
@@ -128,7 +128,7 @@ Finally, the \dreca-\teneighty\ double-mutant displays a slight increase in the 
 %%% Spot lifetime histogram tails are not well fitted by a bi-exponential model (they only represent 1-3% of the spots)
 %%% A tri-exponential decay model fits the tail better, and yields a very slow dissociation rate
 %%% The very slow rates are ~ equal to bleaching, so the spot lifetime cannot be estimated. However, we know that it's very long
-
+Zooming on the tails of the RecB spot lifetime histograms reveals there is a fraction of very long-lived RecB spots (> 50 sec) which are not well accounted for by our bi-exponential fit.
 
 %% RecB spots in ΔrecA and/or 1080 background in the presence of ciprofloxacin are not centred as in WT (to be extended with sytox data)
 %%% In ΔrecA there is no centring and even a slight "exclusion" of spots from the centre of the cell. This confirms the involvement of the SOS response in RecB spot centring.
