--- a/Notebooks/3_Mutants/RecB_dissociation.ipynb
+++ b/Notebooks/3_Mutants/RecB_dissociation.ipynb
@@ -70,13 +70,13 @@
     "                            '240116_1', '240116_2', '240116_3',\n",
     "                            '240117_1', '240117_2', '240117_3', '240117_4'],\n",
     "                    groups=['WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0', 'WT, 0',\n",
-    "                            '$\\Delta$recA, 0', '$\\Delta$recA, 0', '$\\Delta$recA, 0',\n",
+    "                            'ΔrecA, 0', 'ΔrecA, 0', 'ΔrecA, 0',\n",
     "                            'RecB1080, 0', 'RecB1080, 0', 'RecB1080, 0',\n",
     "                            'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL', 'WT, 30 ng/mL',\n",
-    "                            '$\\Delta$recA, 30 ng/mL', '$\\Delta$recA, 30 ng/mL', '$\\Delta$recA, 30 ng/mL', '$\\Delta$recA, 30 ng/mL', '$\\Delta$recA, 30 ng/mL',\n",
+    "                            'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL', 'ΔrecA, 30 ng/mL',\n",
     "                            'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL', 'RecB1080, 30 ng/mL',\n",
-    "                            'RecB1080-$\\Delta$recA, 0', 'RecB1080-$\\Delta$recA, 0', 'RecB1080-$\\Delta$recA, 0',\n",
-    "                            'RecB1080-$\\Delta$recA, 30 ng/mL', 'RecB1080-$\\Delta$recA, 30 ng/mL', 'RecB1080-$\\Delta$recA, 30 ng/mL', 'RecB1080-$\\Delta$recA, 30 ng/mL'],\n",
+    "                            'RecB1080-ΔrecA, 0', 'RecB1080-ΔrecA, 0', 'RecB1080-ΔrecA, 0',\n",
+    "                            'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL', 'RecB1080-ΔrecA, 30 ng/mL'],\n",
     "                    filters={'all':'Frame < 50'},\n",
     "                    metadata='DateTime',\n",
     "                    rename_objects={'Spot_detection':'RecB_spots'},\n",
@@ -300,8 +300,8 @@
     "    .add(so.Bar(), so.Agg('mean'), so.Dodge(by=['alpha']))\n",
     "    .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
     "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA']),\n",
-    "           x=so.Nominal(order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA']))\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']))\n",
     "    .share(y=False)\n",
     "    .limit(y=(None, None))\n",
     "    .label(x=\"\", y=\"Proportion of spots (%)\", color='', title='Proportion of very long-lived spots (> 50 sec)', alpha='Ciprofloxacin')\n",
@@ -593,7 +593,7 @@
     "      .reset_index()\n",
     "      .assign(Strain=lambda df: df.Strain\n",
     "                          .astype('category')\n",
-    "                          .cat.set_categories(['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA'], ordered=True))\n",
+    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
     "      .sort_values('Strain')\n",
     "      .set_index(['Strain','Cipro','Rate_type'])\n",
     "      )\n",
@@ -625,7 +625,7 @@
    ],
    "source": [
     "df = (lifetimes_biexp\n",
-    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-$\\Delta$recA':'RecB1080\\n$\\Delta$recA'})\n",
+    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      .query('Parameter == \"Lifetime\"  and Rate_type == \"Long\"')\n",
     "      )\n",
     "\n",
@@ -636,8 +636,8 @@
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
     "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA']),\n",
-    "           x=so.Nominal(order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA'])\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -838,7 +838,7 @@
    "source": [
     "df = (triexp_fit\n",
     "      .parameters\n",
-    "      .replace({'RecB1080-$\\Delta$recA':'RecB1080\\n$\\Delta$recA'})\n",
+    "      .replace({'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      .query(\"Parameter == 'Rate_3'\")\n",
     "      )\n",
     "\n",
@@ -849,8 +849,8 @@
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
     "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA']),\n",
-    "           x=so.Nominal(order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA'])\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -1215,7 +1215,7 @@
     "      .reset_index()\n",
     "      .assign(Strain=lambda df: df.Strain\n",
     "                          .astype('category')\n",
-    "                          .cat.set_categories(['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA'], ordered=True))\n",
+    "                          .cat.set_categories(['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA'], ordered=True))\n",
     "      .sort_values('Strain')\n",
     "      .set_index(['Strain','Cipro','Rate_type'])\n",
     "      )\n",
@@ -1254,7 +1254,7 @@
    ],
    "source": [
     "df = (lifetimes_triexp\n",
-    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-$\\Delta$recA':'RecB1080\\n$\\Delta$recA'})\n",
+    "      .replace({'Fast':'Short', 'Slow':'Long', 'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      .query('Parameter == \"Lifetime\"  and Rate_type == \"Long\"')\n",
     "      )\n",
     "\n",
@@ -1265,8 +1265,8 @@
     "    .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     "    .add(so.Dots(marker='.', color='k', fillalpha=1), so.Jitter(), legend=False)\n",
     "    .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'],\n",
-    "                            order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA']),\n",
-    "           x=so.Nominal(order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA'])\n",
+    "                            order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
+    "           x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
     "           )\n",
     "    .share(y='row')\n",
     "    .limit(y=(None, None))\n",
@@ -1358,11 +1358,11 @@
     "(\n",
     " so.Plot(df, x='Time_min_bin', y='norm_count', color='Strain', alpha='Cipro')\n",
     " .layout(size=(12, 4))\n",
-    " .facet(col='Strain', order={'col':['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA']})\n",
+    " .facet(col='Strain', order={'col':['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']})\n",
     " .add(so.Bar(), so.Agg(), so.Dodge(by=['alpha']))\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), so.Dodge(by=['alpha']), legend=False)\n",
     " .scale(alpha=so.Nominal(),\n",
-    "        color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080-$\\Delta$recA']),\n",
+    "        color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080-ΔrecA']),\n",
     "        x=so.Continuous().tick(every=15)\n",
     "        )\n",
     " .share(y=True)\n",
@@ -1425,7 +1425,7 @@
     "              norm_count=lambda df: df.norm_count / df.nCells\n",
     "              )\n",
     "      .query('long_spot == \"Long\"')\n",
-    "      .replace({'RecB1080-$\\Delta$recA':'RecB1080\\n$\\Delta$recA'})\n",
+    "      .replace({'RecB1080-ΔrecA':'RecB1080\\nΔrecA'})\n",
     "      )\n",
     "\n",
     "(\n",
@@ -1434,8 +1434,8 @@
     " .facet(col='Cipro')\n",
     " .add(so.Bar(), so.Agg('mean'), legend=False)\n",
     " .add(so.Dots(color='k', marker='.', fillalpha=1), so.Jitter(), legend=False)\n",
-    " .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA']),\n",
-    "        x=so.Nominal(order=['WT', '$\\Delta$recA', 'RecB1080', 'RecB1080\\n$\\Delta$recA'])\n",
+    " .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick', 'mediumorchid'], order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA']),\n",
+    "        x=so.Nominal(order=['WT', 'ΔrecA', 'RecB1080', 'RecB1080\\nΔrecA'])\n",
     "        )\n",
     " .share(y=True)\n",
     " .limit(x=(None, None), y=(None, None))\n",
@@ -1551,7 +1551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
