Added a paragraph on SOS and nucleoid compaction

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -730,3 +730,37 @@ The authors have declared no competing interest.},
    url = {https://www.biorxiv.org/content/10.1101/2023.12.22.573010v1 https://www.biorxiv.org/content/10.1101/2023.12.22.573010v1.abstract},
    year = {2023},
 }
+@article{Baharoglu2014,
+   abstract = {The presence of an abnormal amount of single-stranded DNA in the bacterial cell constitutes a genotoxic alarm signal that induces the SOS response, a broad regulatory network found in most bacterial species to address DNA damage. The aim of this review was to point out that beyond being a repair process, SOS induction leads to a very strong but transient response to genotoxic stress, during which bacteria can rearrange and mutate their genome, induce several phenotypic changes through differential regulation of genes, and sometimes acquire characteristics that potentiate bacterial survival and adaptation to changing environments. We review here the causes and consequences of SOS induction, but also how this response can be modulated under various circumstances and how it is connected to the network of other important stress responses. In the first section, we review articles describing the induction of the SOS response at the molecular level. The second section discusses consequences of this induction in terms of DNA repair, changes in the genome and gene expression, and sharing of genomic information, with their effects on the bacteria's life and evolution. The third section is about the fine tuning of this response to fit with the bacteria's 'needs'. Finally, we discuss recent findings linking the SOS response to other stress responses. Under these perspectives, SOS can be perceived as a powerful bacterial strategy against aggressions.},
+   author = {Zeynep Baharoglu and Didier Mazel},
+   doi = {10.1111/1574-6976.12077},
+   issn = {0168-6445},
+   issue = {6},
+   journal = {FEMS Microbiology Reviews},
+   keywords = {Antibiotic resistance,Bacteria,DNA repair,SOS,Stress,bacteria},
+   month = {11},
+   pages = {1126-1145},
+   pmid = {24923554},
+   publisher = {Oxford Academic},
+   title = {SOS, the formidable strategy of bacteria against aggressions},
+   volume = {38},
+   url = {https://dx.doi.org/10.1111/1574-6976.12077},
+   year = {2014},
+}
+@article{Bos2015,
+   abstract = {Bacteria can rapidly evolve resistance to antibiotics via the SOS response, a state of high-activity DNA repair and mutagenesis. We explore here the first steps of this evolution in the bacterium Escherichia coli. Induction of the SOS response by the genotoxic antibiotic ciprofloxacin changes the E. coli rod shape into multichromosome-containing filaments. We show that at subminimal inhibitory concentrations of ciprofloxacin the bacterial filament divides asymmetrically repeatedly at the tip. Chromosome-containing buds are made that, if resistant, propagate nonfilamenting progeny with enhanced resistance to ciprofloxacin as the parent filament dies. We propose that the multinucleated filament creates an environmental niche where evolution can proceed via generation of improved mutant chromosomes due to the mutagenic SOS response and possible recombination of the new alleles between chromosomes. Our data provide a better understanding of the processes underlying the origin of resistance at the single-cell level and suggest an analogous role to the eukaryotic aneuploidy condition in cancer.},
+   author = {Julia Bos and Qiucen Zhang and Saurabh Vyawahare and Elizabeth Rogers and Susan M. Rosenberg and Robert H. Austin},
+   doi = {10.1073/PNAS.1420702111/SUPPL_FILE/PNAS.1420702111.SM03.AVI},
+   issn = {10916490},
+   issue = {1},
+   journal = {Proceedings of the National Academy of Sciences of the United States of America},
+   keywords = {Antibiotic resistance,Evolution,Filamentation,Mutation,Sos response},
+   month = {1},
+   pages = {178-183},
+   pmid = {25492931},
+   publisher = {National Academy of Sciences},
+   title = {Emergence of antibiotic resistance from multinucleated bacterial filaments},
+   volume = {112},
+   url = {https://www.pnas.org/doi/abs/10.1073/pnas.1420702111},
+   year = {2015},
+}
