--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -764,3 +764,13 @@ The authors have declared no competing interest.},
    url = {https://www.pnas.org/doi/abs/10.1073/pnas.1420702111},
    year = {2015},
 }
+@article{Otsu1979,
+   author = {N Otsu},
+   doi = {10.1371/JOURNAL.PONE.0035550},
+   journal = {IEEE Trans SMC},
+   pages = {62-},
+   title = {A threshold selection method from gray-level histograms.},
+   volume = {9},
+   url = {https://cir.nii.ac.jp/crid/1370567187454221059},
+   year = {1979},
+}
