Added Jean's paragraph on denoising

--- a/Methods.tex
+++ b/Methods.tex
@@ -12,7 +12,7 @@ Alternatively, a turbidostat device (OGIBio) was used, which measured \od\ and d
 \subsubsection*{Halo labelling}
 A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
-When relevant, cellular DNA was labelled by adding Sytox Green (ADD SOURCE) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above (1h at 37\celsius, shaking 150 rpm).
+When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above (1h at 37\celsius, shaking 150 rpm).
 \subsubsection*{Dye removal}
 The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube (to avoid the dye sticking to the plastic of the tube). This procedure was repeated 3 times to fully remove unbound dye, and the cells were finally resuspended in 200 µL medium. The same procedure was applied to wash off the JF549 and Sytox Green dyes.
 \subsubsection*{Sample preparation}
@@ -39,7 +39,7 @@ The general data analysis workflow is described in Supp. Figure \ref{SIFig:analy
 
 \subsubsection*{BACMMAN pipeline}
 \paragraph*{Deep-learning-based denoising of fluorescence images}
-% Ask Jean to write up a paragraph on this?
+We improved a self-supervised denoising neural network by making it use the previous and next frames in the timelapse and performing deconvolution simultaneously. Our method is based on a previously developed method [ref: https://arxiv.org/abs/2102.08023] which uses an encoder-decoder convolutional neural network that performs denoising (DNet) as well as a fully connected neural network that recovers the noise distribution used to compute the self-supervised loss. In order to include previous and next frames, we modified the architecture of DNet so that the encoder is shared between frames (t-1, t and t+1), i.e. it processes each frame independently. At each contraction level, the residual tensors corresponding to each frame are combined using a 1x1 convolution and fed to the decoder. The same applies for the feature tensors and the last level of the decoder. The decoder only predicts the central frame (t) and the same self-supervised loss is used. We observe a dramatic improvement of denoising performance, which implies that the proposed architecture benefits from using information from adjacent frames. It has been shown that performing denoising and deconvolution simultaneously dramatically improves deconvolution performance [ref: https://arxiv.org/pdf/2006.06156.pdf]. We computed the experimental PSF of our system by averaging hundreds of bead images cropped in a 33x33 pixels area around each bead, and normalised so that values sum to one. The obtained averaged images were used during training as kernel for a 2D convolution at the end of the neural network. At prediction time, convolution was removed.
 
 \paragraph{Cell segmentation}
 The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts an Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might therefore be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
